--- a/portfolio.html
+++ b/portfolio.html
@@ -47,59 +47,59 @@
             <button type="button" class="button nav portfolio">Маркетинг</button>
         </li>
         </ul>
-        <ul class="site-nav list">
-            <li>
-                <a href="./portfolio.html"><img src="./images/teckhnokryak.jpg" alt="laptop with pictures" width="370">
-                <h2 class="section-title">Технокряк</h2>
-                <p class="type">Веб-сайт</p>
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/teckhnokryak.jpg" alt="laptop with pictures" width="370">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-description">Веб-сайт</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/new-orlean-vs-golden-state.jpg" alt="basketbol-players" width="370">
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-description">Дизайн</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/the-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-description">Додаток</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/headphones.jpg" alt="headphones" width="370">
+                <h2 class="portfolio-title">Проєкт Prime</h2>
+                <p class="portfolio-description">Маркетинг</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/boxes.jpg" alt="two-boxes" width="370">
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p class="portfolio-description">Додаток</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./images/new-orlean-vs-golden-state.jpg" alt="basketbol-players" width="370">
-                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-                <p class="type">Дизайн</p>
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/laptop.jpg" alt="laptop" width="370">
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-description">Веб-сайти</p>
                 </a>
             </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/the-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
-                <h2 class="section-title">Ресторан Seafood</h2>
-                <p class="type">Додаток</p>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/book.jpg" alt="book-with-pictures" width="370">
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p class="portfolio-description">Дизайн</p>
                 </a>
             </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/headphones.jpg" alt="headphones" width="370">
-                <h2 class="section-title">Проєкт Prime</h2>
-                <p class="type">Маркетинг</p>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/label-tag.jpg" alt="Label-tag" width="370">
+                <h2 class="portfolio-title">Проєкт LAB</h2>
+                <p class="portfolio-description">Маркетинг</p>
                 </a>
             </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/boxes.jpg" alt="two-boxes" width="370">
-                <h2 class="section-title">Проєкт Boxes</h2>
-                <p class="type">Додаток</p>
-                </a>
-            </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/laptop.jpg" alt="laptop" width="370">
-                <h2 class="section-title">Inspiration has no Borders</h2>
-                <p class="type">Веб-сайти</p>
-                </a>
-            </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/book.jpg" alt="book-with-pictures" width="370">
-                <h2 class="section-title">Видання Limited Edition</h2>
-                <p class="type">Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="./portfolio.html"><img src="./images/label-tag.jpg" alt="Label-tag" width="370">
-                <h2 class="section-title">Проєкт LAB</h2>
-                <p class="type">Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="./portfolio.html"><img src="./imageslaptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
-                <h2 class="section-title">Growing Business</h2>
-                <p class="type">Додаток</p>
+            <li class="portfolio-item">
+                <a class="portfolio-card" href="./portfolio.html"><img src="./images/laptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-description">Додаток</p>
                 </a>
             </li>
         </ul>
